--- a/TextOutlineAnimation/Views/MainWindow.axaml
+++ b/TextOutlineAnimation/Views/MainWindow.axaml
@@ -11,7 +11,6 @@
         Title="TextOutlineAnimation">
 	<Window.Styles>
 		<Style Selector="c|OutlinedText">
-			<Setter Property="FontSize" Value="160" />
 			<Setter Property="FontWeight" Value="Bold" />
 			<Setter Property="TextWrapping" Value="Wrap" />
 			<Setter Property="StrokeThickness" Value="4" />
@@ -76,11 +75,13 @@
 		<StackPanel Orientation="Horizontal" Spacing="8">
 			<CheckBox IsChecked="{Binding UseTransparentForeground}" Content="Transparent Foreground" />
 			<CheckBox IsChecked="{Binding UseStrokeAnimation}" Content="Animate Stroke" />
+			<NumericUpDown x:Name="sizeControl" Minimum="8" Increment="2" ButtonSpinnerLocation="Right" Value="96" />
 		</StackPanel>
 		<ScrollViewer Grid.Row="1">
 			<c:OutlinedText Classes.transparent="{Binding UseTransparentForeground}"
 							Classes.animate="{Binding UseStrokeAnimation}"
-							Text="{Binding SampleText}" />
+							Text="{Binding SampleText}"
+							FontSize="{Binding Value, ElementName=sizeControl}"/>
 		</ScrollViewer>
 	</Grid>
 </Window>
