--- a/BlockPatternAnimation/App.axaml
+++ b/BlockPatternAnimation/App.axaml
@@ -1,12 +1,13 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="using:BlockPatternAnimation"
+             RequestedThemeVariant="Light"
              x:Class="BlockPatternAnimation.App">
     <Application.DataTemplates>
         <local:ViewLocator/>
     </Application.DataTemplates>
 
     <Application.Styles>
-        <SimpleTheme Mode="Light"/>
+        <SimpleTheme />
     </Application.Styles>
 </Application>
