--- a/RealTimeBitmapAdapter/App.axaml
+++ b/RealTimeBitmapAdapter/App.axaml
@@ -1,10 +1,11 @@
-<Application xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:RealTimeBitmapAdapter"
-             RequestedThemeVariant="Light"
-             x:Class="RealTimeBitmapAdapter.App">
+<Application
+    x:Class="RealTimeBitmapAdapter.App"
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="using:RealTimeBitmapAdapter"
+    RequestedThemeVariant="Light">
     <Application.DataTemplates>
-        <local:ViewLocator/>
+        <local:ViewLocator />
     </Application.DataTemplates>
 
     <Application.Styles>
