--- a/RealTimeBitmapAdapter/Views/MainWindow.axaml
+++ b/RealTimeBitmapAdapter/Views/MainWindow.axaml
@@ -1,33 +1,52 @@
-<Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:RealTimeBitmapAdapter.ViewModels"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="RealTimeBitmapAdapter.Views.MainWindow"
-        Icon="/Assets/avalonia-logo.ico"
-        Title="RealTimeBitmapAdapter">
+<Window
+    x:Class="RealTimeBitmapAdapter.Views.MainWindow"
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vm="using:RealTimeBitmapAdapter.ViewModels"
+    Title="RealTimeBitmapAdapter"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    x:DataType="vm:MainWindowViewModel"
+    Icon="/Assets/avalonia-logo.ico"
+    mc:Ignorable="d">
 
     <Design.DataContext>
-        <vm:MainWindowViewModel/>
+        <vm:MainWindowViewModel />
     </Design.DataContext>
 
-	<Grid RowDefinitions="auto,*">
-		<StackPanel ZIndex="1" Spacing="8" Grid.Row="0" Orientation="Horizontal">
-			<CheckBox IsChecked="{Binding UseParallelStrategy}" Content="Parallelized Copy" ToolTip.Tip="Uses Parallel.For to perform the copy from an unscaled [0, 1] image onto the WriteableBitmap" />
-			<CheckBox IsChecked="{Binding UseRenderLoop}" Content="Render Loop" ToolTip.Tip="Use IRenderLoopTask if checked, else use DispatcherTimer to initiate frame renders" />
-			<CheckBox IsChecked="{Binding ShouldShowOverlay}" Content="Overlay" ToolTip.Tip="Show Text Overlay drawn to a WriteableBitmap with SkiaSharp" />
+    <Grid RowDefinitions="auto,*">
+        <StackPanel
+            Grid.Row="0"
+            Orientation="Horizontal"
+            Spacing="8"
+            ZIndex="1">
+            <CheckBox
+                Content="Parallelized Copy"
+                IsChecked="{Binding UseParallelStrategy}"
+                ToolTip.Tip="Uses Parallel.For to perform the copy from an unscaled [0, 1] image onto the WriteableBitmap" />
+            <CheckBox
+                Content="Overlay"
+                IsChecked="{Binding ShouldShowOverlay}"
+                ToolTip.Tip="Show Text Overlay drawn to a WriteableBitmap with SkiaSharp" />
 
-			<TextBlock Text="Width" VerticalAlignment="Center" />
-			<TextBox MinWidth="80" Text="{Binding ImageWidth}" />
-			<TextBlock Text="Height" VerticalAlignment="Center" />
-			<TextBox MinWidth="80" Text="{Binding ImageHeight}" />
-			<Button Content="Apply Settings" Click="ApplySettings_Click" />
+            <TextBlock VerticalAlignment="Center" Text="Width" />
+            <TextBox MinWidth="80" Text="{Binding ImageWidth}" />
+            <TextBlock VerticalAlignment="Center" Text="Height" />
+            <TextBox MinWidth="80" Text="{Binding ImageHeight}" />
+            <Button Click="ApplySettings_Click" Content="Apply Settings" />
 
-			<TextBlock Text="{Binding FramesPerSecond, StringFormat=FPS: {0}}" VerticalAlignment="Center" />
-		</StackPanel>
+            <TextBlock VerticalAlignment="Center" Text="{Binding FramesPerSecond, StringFormat=FPS: {0}}" />
+        </StackPanel>
 
-		<Image x:Name="_image" Grid.Row="1" Width="{Binding ActualWidth}" Height="{Binding ActualHeight}" HorizontalAlignment="Left" VerticalAlignment="Top" />
-	</Grid>
+        <Image
+            x:Name="_image"
+            Grid.Row="1"
+            Width="{Binding ActualWidth}"
+            Height="{Binding ActualHeight}"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top" />
+    </Grid>
 
 </Window>
