--- a/Dialogs/Views/MainWindow.axaml
+++ b/Dialogs/Views/MainWindow.axaml
@@ -13,7 +13,7 @@
     x:DataType="vm:MainWindowViewModel"
     Icon="/Assets/avalonia-logo.ico"
     mc:Ignorable="d">
-    <Grid Margin="0,0,32,0" ColumnDefinitions="30*,40*,30*">
+    <Grid Focusable="True" Margin="0,0,32,0" ColumnDefinitions="30*,40*,30*">
         <ScrollViewer Grid.Column="1">
             <ItemsControl x:Name="items" ItemsSource="{Binding Todos}">
                 <ItemsControl.ItemTemplate>
